# src/controllers/index.js
@@ -1,2 +1,3 @@
 export {CustomerController} from './customer';
 export {DepartmentController} from './department';
+export {CategoryController} from './categories';
